# blended-19-05

no-sql/: README.md  db.py  docker-compose.yaml  main.py  message.py  pyproject.toml
scrapping/: README.md  avg_price.py  main.py  pyproject.toml  rozetka.py
